corrected the alignment of the menu items

--- a/src/App.css
+++ b/src/App.css
@@ -1016,7 +1016,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     /* padding: 0 25px; */
     font-size: 18px;
     opacity: 0.75;
+    /* border: 2px yellow solid; */
 
+
+  }
+  .navbar-nav {
+
+    display: flex;
+    align-items: flex-start;
   }
 }
 /* ********* Banner ********** */
